--- a/css/style.css
+++ b/css/style.css
@@ -56,27 +56,71 @@ h3 {
 /* Gallery Section */
 
 #gallery {
-    border: 10px solid
+    border: 10px solid;
+    text-align:center;
+}
+#gallery img {
+    max-width:100%;
+}
+
+@media screen and (min-width: 1050px) {
+    
+    #gallery figure {
+        display:grid;
+        grid-template-columns: 1fr 1fr; 
+    }
+    #gallery figure figcaption {
+        align-self:center;
+    }
 
 }
+
+@media screen and (min-width: 1770px) {
+
+    #gallery {
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+    #gallery hr {
+        display:none;
+    }
+    #gallery figure {
+        display:block;
+    }
+
+}
+
+
+/*
+
+
+
+*/
+
+/*
 #gallery div {
     margin: 0 auto;
 }
 #gallery2 div {
     margin: 0 auto;
+    text-align: center;
 } 
 .column {
-    float: left;
     margin: 0 auto;
+    text-align:center;
 }
 
 #gallery img {
     max-width: 100%;
-    padding: 10px;
+    padding: 100px;
+
 }
 #gallery-figure {
     text-align:center;
-}
+}*/
 
 /* Book Section */
 
