--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,23 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'nerko one',cursive;
 }
+/*header detail type*/
 h1 {
     font-size: 40pt;
 }
-
+h2 {
+    font-size: 35px;
+    text-align:center;
+    
+}
+h3 {
+    color:#9E8036; 
+    background-color:#C4BE9C;
+    border: 10px solid;
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+}
 header {
     text-align:center;
 }
@@ -41,40 +54,32 @@ header {
 #bio {
     text-align:center;
 }
-h2 {
-    font-size: 35px;
-    text-align:center;
-}
 
 /* hobbies Section */
-#hobbies  {
-    color:#9E8036; 
-    background-color:#C4BE9C;
+#list {
     border: 10px solid;
-    font-size: 20px;
+    font-size: 20px; 
+    padding: 10px;
 }
-h3 {
-    font-size: 30px;
-    text-align: center;
+#hobbies { 
+    font-size: 17px;
 }
-#list { 
-    border: 10px solid;
-    font-size: 20px;
-    padding: 20px;
-
+section#hobbies {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
 }
-
-/* Gallery Section */
-
+/* Gallery Section */ 
 #gallery {
     border: 20px solid;
-    text-align:center;
+    text-align: center;
+    padding: 10px;
 }
 #gallery img {
     max-width:100%;
 }
 
-@media screen and (min-width: 1050px) {
+@media screen and (min-width: 768px) {
     
     #gallery figure {
         display:grid;
@@ -82,17 +87,17 @@ h3 {
     }
     #gallery figure figcaption {
         align-self:center;
+        padding: 10px;
     }
-
 }
 
-@media screen and (min-width: 1770px) {
+@media screen and (min-width: 1440px) {
 
     #gallery {
         display:grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
-    #gallery h2 {
+    #gallery h3 {
         grid-column: 1/-1;
     }
     #gallery hr {
@@ -103,66 +108,31 @@ h3 {
     }
 
 }
-
-
-/*
-
-
-
-*/
-
-/*
-#gallery div {
-    margin: 0 auto;
-}
-#gallery2 div {
-    margin: 0 auto;
-    text-align: center;
-} 
-.column {
-    margin: 0 auto;
-    text-align:center;
-}
-
-#gallery img {
-    max-width: 100%;
-    padding: 100px;
-
-}
-#gallery-figure {
-    text-align:center;
-}*/
-
 /* Book Section */
-
-h3 {
-    
-}
-
-
 #book {
     border: 40px solid;
     padding: 10px; 
-}
-#book div {
-    padding:3rem;
-    max-width: 40rem;
-    margin: 0 auto;
+    text-align: center;
+    max-width: 100%
 }
 #book div p{
-    padding: 0.3em 0;
-    clear: both;
+    padding: 20px;
+    max-width: 100%;
+    columns: 40rem;
 }
 
-/* drop caps */
-@media screen and (min-width: 1770px) {
-#book {
+@media screen and (min-width: 768px){
+#book div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column: 1/2;
+    padding: 20px;
 }
 }
-#book div p:nth-child(4n+1):first-letter {
+
+
+/* drop caps */
+
+#book div p:nth-child(1):first-letter {
     color:black;
     float: left;
     font-size:3em;  
@@ -172,7 +142,6 @@ h3 {
     margin-right: .65rem;
     border-radius: 20%;
     box-shadow:10px 10px 10px;
-
 }
 
 
