--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,8 @@ section#hobbies {
     #gallery figure {
         display:block;
     }
-
 }
+
 /* Book Section */
 #book {
     border: 40px solid;
@@ -123,16 +123,58 @@ section#hobbies {
 
 /* drop caps */
 
-#book div p:nth-child(1):first-letter {
+#book div p:nth-child(n):first-letter {
     color:black;
     float: left;
     font-size:3em;  
     background-color: seagreen;
     line-height: 1;
-    border:4px outset blue;
+    border: 4px outset blue;
     margin-right: .65rem;
     border-radius: 20%;
     box-shadow:10px 10px 10px;
 }
 
+/*video*/
 
+.videorapper {
+    object-fit: contain;
+    border: 10px solid;
+    padding: 20px;
+}
+
+#myvideo {
+    border-radius: 20px;
+    border: 3px solid;
+    border-color: darkblue;
+}
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+}
+#myvideo iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    
+    #video .videorapper {
+        display: grid;
+        grid-template-columns: 1fr 2fr; 
+        padding: 10px;
+    }
+    #video .videorapper figcaption{
+        align-self: center;
+        padding: 20px;
+    }
+    #video iframe {
+        object-fit: contain;
+    }
+    #video h3 {
+        grid-column: 1/-1;
+    }
+}
