--- a/css/style.css
+++ b/css/style.css
@@ -182,4 +182,13 @@ section#hobbies {
 
 #formElements {
     display: grid;
+    row-gap: .5em;
+}
+#contact {
+    padding: 1rem;
+    max-width: 50%;
+    margin: 2rem auto;
+    border:#DBC45E 20px solid;
+    
+
 }
