--- a/css/nav.css
+++ b/css/nav.css
@@ -21,7 +21,14 @@ main {
 
 /* navbar */
 
-
+.navbar {
+    background-color:rgb(141, 190, 240);
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
 
 /* logo */
 
