--- a/css/nav.css
+++ b/css/nav.css
@@ -60,7 +60,7 @@ main {
 
 .navbar-links a {
     color: whitesmoke;
-    background-attachment: black;
+    background-color: rgb(141, 190, 240);
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
@@ -68,7 +68,10 @@ main {
     display: inline-block;
 }
 
-
+.navbar-links a:hover, .navbar-links a:focus {
+    filter: invert(1);
+    border-radius: 20px;
+}
 
 /* 
 media query for non-mobile nav bar
