--- a/css/nav.css
+++ b/css/nav.css
@@ -22,19 +22,28 @@ main {
 /* navbar */
 
 .navbar {
-    background-color:rgb(141, 190, 240);
+    background: #2c2a16;
     color: whitesmoke;
     display: flex;
     flex-direction: column;
     font-size: 2rem;
     margin-bottom: 1rem;
-}
+    padding: 1rem;
+    transform: scale(1, 0);
+    transition: transform 250ms ease-in-out;
+    transform-origin: top;
+    position: absolute;
+    opacity: .9;
+    right: .3%
+} 
+
 
 /* logo */
 
 .logo {
     display: flex;
     align-items: center;
+    background-color: #c4b544;
 }
 .logo img {
     height: 6vw;
@@ -50,8 +59,10 @@ main {
 .navbar-links li {
     list-style: none;
     display: block;
-    padding: 0.5em 0; 
+    padding: 0.5em 0;
 }
+
+ 
 
 /*  
  style all a tags in header 
@@ -60,14 +71,16 @@ main {
 
 .navbar-links a {
     color: whitesmoke;
-    background-color: rgb(141, 190, 240);
+    background-color: #645e51;
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
     text-decoration: none;
     display: inline-block;
+    opacity: 0;
+    transition: opacity 150ms ease-in-out ;
 }
-
+ 
 .navbar-links a:hover, .navbar-links a:focus {
     filter: invert(1);
     border-radius: 20px;
@@ -78,3 +91,38 @@ media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
+@media screen and (min-width: 800px) {
+    .navbar-links {
+        display: flex;
+        justify-content: space-between;
+    }
+    #navbar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .navbar ul {
+        display: flex;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .nav-toggle-label {
+        display: none;
+    }
+    header {
+        display: grid;
+        grid-template-columns: auto ;
+        background-color: #c4b544
+    }
+    .navbar {
+        all: unset;
+        grid-column: 3 / 4;
+        
+
+}
+    .navbar-links a {
+        opacity: 1;
+        
+    }
+}
