--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ h3 {
 header {
     text-align:center;
 }
+/* logo */
+.logo {
+    padding: 5px;
+}
+
 /* hero Section */ 
 
 #hero, footer {
@@ -38,14 +43,28 @@ header {
 }
 #hero img {
     width:350px;
-    max-width: 100%;
+    max-width: 50%;
+    border-radius: 65%;
+    border: 10px solid;
+    border-color: #23211b;
 }
 
 /* Bio Section */
 #bio {
     text-align:center;
+    border: 20px solid;
+    border-color:#868684;
+    border-radius: 20%;
+    padding: 10px;
+
 }
 
+@media screen and (min-width: 768px){
+    #bio div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
 /* hobbies Section */
 #list {
     border: 10px solid;
@@ -60,7 +79,9 @@ section#hobbies {
     flex-direction: column; 
     align-items: center;
 }
+
 /* Gallery Section */ 
+
 #gallery {
     border: 20px solid;
     text-align: center;
@@ -100,25 +121,87 @@ section#hobbies {
 }
 
 /* Book Section */
+
 #book {
     border: 40px solid;
     padding: 10px; 
+    max-width: 100%;
     text-align: center;
-    max-width: 100%
 }
 #book div p{
     padding: 20px;
     max-width: 100%;
-    columns: 40rem;
+}
+/* animations(still part of the book area) */
+#box{
+    width: 8%;
+    border: 7px solid;
+    border-color:black;
+    background-color: gray;
+    animation: slide, colorchange, scale;
+    animation-timing-function: steps(10, end);
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+    border-radius: 10%;
+    max-width: 100%;
+}
+
+
+@keyframes slide{
+    from{margin-left: 20%}
+    to{margin-left: 0%}
+}
+@keyframes scale{
+    50%{transform: scale(1.3, 1.3);}
+}
+
+@keyframes colorchange {
+    0%{background-color: red}
+    25%{background-color: whitesmoke;}
+}
+
+
+.child {
+    align-self: flex-end;
+    max-width: 50%;
+    width: 8%;
+    border: 7px solid;
+    border-color:black;
+    background-color: gray;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+    max-width: 100%;
+}
+.scale:hover {
+    animation-name: scale;
+    animation-iteration-count: 1;
+}
+@keyframes scale {
+    100%{transform: scale(1.3);}
 }
 
 @media screen and (min-width: 768px){
-#book div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 20px;
+    #book div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 20px;
+        align-items: center;
+        max-width: 100%;
+    }
+    #book .child {
+        align-items: center;
+    }
 }
+@media screen and (max-width: 768px) {
+    #box {
+        width: 12%;
 }
+.child {
+        width: 12%;
+}
+}   
 
 
 /* drop caps */
@@ -130,9 +213,9 @@ section#hobbies {
     background-color: seagreen;
     line-height: 1;
     border: 4px outset blue;
-    margin-right: .65rem;
+    margin-right: .1rem;
     border-radius: 20%;
-    box-shadow:10px 10px 10px;
+    box-shadow:5px 5px 5px;
 }
 
 /*video*/
@@ -316,4 +399,9 @@ legend {
     transition: opacity 250ms ease-in-out 250ms;
 }
 
+/* footer */
 
+footer {
+    display:grid;
+    grid-column: 1/-1;
+}
